Changes in Backend:
1) Add new DTOs to track financial changes in stock making a summary;
2) Changed endpoints in analytics controller and implementation to better reflect the new changes
3) changed in Service layer to better reflect the changes in finacnial summary (COGS, Write-offs)